fdo#59542 smaller +/- buttons will not be truncated at the bottom

Change-Id: If937d72e5b10bfbf055cf5b9909d50bbf5ddac81